[package]
name = "AoC-2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
overflow-checks = false
debug = true

[dependencies]
regex = "*"
lazy_static = "*"
grid = "*"
rug = { version = "*", features = ["float"] }
contracts = "*"
all_asserts = "*"
enum-iterator = "*"
ndarray = { version = "0.15.2", features = ["blas", "approx", "std"] }
ndarray-linalg = "0.16.0"
itertools = "*"